sandbox_fixtures/sq205/force-app/main/default/objects/Case_SLA__c/Case_SLA__c.object-meta.xml
<CustomObject>
    <description>SQ-205 fixture: the SLA clock record auto-created when a Case is created (via the SQ205_Create_Case_SLA flow).</description>
    <label>Case SLA</label>
    <nameField>
        <displayFormat>SLA-{0000}</displayFormat>
        <label>Case SLA Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case SLAs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>