sandbox_fixtures/sq205/force-app/main/default/objects/Case_SLA__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Active</fullName><default>true</default><label>Active</label></value>
            <value><fullName>Met</fullName><default>false</default><label>Met</label></value>
            <value><fullName>Breached</fullName><default>false</default><label>Breached</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>